# chip8

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: display.c.728574780BCFB8C4.idx  display.h.505A960A6415D974.idx  main.c.C158555E85453057.idx  stack.c.B4D6F8F41D0A1EB7.idx  stack.h.218E99E615C6AE2F.idx  vm.c.B866A91EF371D394.idx  vm.h.F7F64A16969CE2CC.idx
include/: display.h  instructions.h  stack.h  vm.h
src/: display.c  main.c  stack.c  vm.c
